# hello-mcp

./: .gitignore  CLAUDE.md  README.md  debug_server.py  debug_server2.py  main.py  pyproject.toml  setup.cfg  state.py  test_qa.py
docs/: implementation-plan.md  progress.md  qa-results.md  qa-sheet.md  requirement.md
domain/: boss.py  stress.py
lib/: response.py
prompts/: 0_plan.md  1_implement.md  2_qa-plan.md  3_qa.md  4_refactor.md
prompts/utils/: todo-check.md  trash-check.md
src/chillmcp/: main.py  state.py
src/chillmcp/tools/: advanced.py  basic.py  registration.py
tests/domain/: test_boss.py  test_stress.py
tests/lib/: test_response.py
tools/: advanced.py  basic.py  registration.py
